# vspy

./: README.md  output.csv  pyproject.toml
VoiceSauce/: func_PraatFormants.m  func_PraatPitch.m  func_SnackFormants.m  func_SnackPitch.m  func_VSformants2ssff.m  vs_About.m  vs_OutputToEMU.m  vs_ParameterEstimation.m  vs_Settings.m
snack2.2.10/ext/: square.vcproj
snack2.2.10/generic/: jkFormant.c  jkFormatMP3.h
snack2.2.10/unix/: Makefile  config.status  snackConfig.sh
snack2.2.10/win/: snack.def  snack.dsp  snack.dsw  snack.sln  snack.vcproj  snackstub.dsp  snackstub.vcproj  sound.def  sound.dsp  sound.vcproj
test/: debug_f0.py  evaluate.py  runner.py
test/compared_results/: f0_metrics.csv  feature_metrics.csv  metrics_guide.md
test/snack_harness/: compare.py  snack_dump.c
test/textgrid/: alice_b.TextGrid  alice_c.TextGrid  atlas_gs2_b.TextGrid  atlas_gs2_c.TextGrid  atlas_gs_b.TextGrid  atlas_gs_c.TextGrid  atlas_t_b.TextGrid  atlas_t_c.TextGrid  bean_b.TextGrid  bean_c.TextGrid  beaten_gs2_b.TextGrid  beaten_gs2_c.TextGrid  beaten_gs_b.TextGrid  beaten_gs_c.TextGrid  beaten_t_b.TextGrid  beaten_t_c.TextGrid  bun_b.TextGrid  bun_c.TextGrid  button_gs2_b.TextGrid  button_gs2_c.TextGrid  button_gs_b.TextGrid  button_gs_c.TextGrid  button_t_b.TextGrid  button_t_c.TextGrid  curly_b.TextGrid  curly_c.TextGrid  curtly_gs2_b.TextGrid  curtly_gs2_c.TextGrid  curtly_gs_b.TextGrid  curtly_gs_c.TextGrid  curtly_t_b.TextGrid  curtly_t_c.TextGrid  dane_b.TextGrid  dane_c.TextGrid  (+120 more)
vspy/: __init__.py  api.py  io.py  project_outline.txt  registry.py
(+20 files in other folders)
